# watchdoc

./: README.md  install.sh  pyproject.toml
src/watchdoc/: cli.py  launchd.py  notify.py
