[project]
name = "watchdoc"
version = "0.1.0"
description = "Watch a folder and OCR PDFs for Spotlight indexing"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["ocr", "pdf", "spotlight", "macos", "watchdog"]
dependencies = [
    "ocrmypdf>=16.0",
    "watchdog>=4.0",
]

[project.urls]
Homepage = "https://github.com/clstaudt/watchdoc"
Repository = "https://github.com/clstaudt/watchdoc"

[project.scripts]
watchdoc = "watchdoc.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/watchdoc"]
artifacts = ["src/watchdoc/icon.png"]
